--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key-here
+VITE_SUPABASE_URL=https://mhuuzxxecncsfugeqide.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_TikPWezN4mOE-Ply5NxWuA_bVJhFilJ
