--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
     "tailwind-merge": "^2.2.1",
